# aurellia

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: CHANGELOG.md
specs/: SPECS.md  TASKS.md  api-contracts.yaml  bdd-scenarios.md  database-schema.yaml
