[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aurellia"]

[project]
name = "aurellia"
version = "0.3.0"
description = "Your personal GitHub trending repo scout agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "hongc", email = "hongc@example.com"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "apscheduler>=3.10.0",
    "structlog>=24.0.0",
    "mcp>=0.1.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.34.0",
    "ruff>=0.6.0",
    "mypy>=1.13.0",
    "faker>=30.0.0",
]

[project.scripts]
aurellia = "aurellia.__main__:main"

# ─── pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=src/aurellia",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "e2e: marks end-to-end tests",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ─── ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
    "S",      # flake8-bandit (security)
    "BLE",    # flake8-blind-except
    "A",      # flake8-builtins
    "PT",     # flake8-pytest-style
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # use of assert (allowed in tests)
    "S603",   # subprocess-without-check (for scripts)
    "BLE001", # blind except (allowed in scrapers)
    "ARG001", # unused function argument (fixtures)
    "ARG002", # unused method argument (overrides)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "A", "ARG"]
"scripts/**/*.py" = ["S", "A", "ARG"]

[tool.ruff.lint.isort]
known-first-party = ["aurellia"]

# ─── mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["bs4.*", "apscheduler.*", "mcp.*"]
ignore_missing_imports = true

# ─── coverage ────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/aurellia"]
branch = true
omit = [
    "*/__init__.py",
    "*/__main__.py",
    "*/mcp/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
    "except ImportError",
]
show_missing = true
fail_under = 80
